feat: add unanimous table exit and compact shared mahjong presentation